--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --open",
     "build": "rm -rf dist && webpack ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.3.1",
     "css-loader": "^5.2.0",
     "html-webpack-plugin": "4",
     "style-loader": "^2.0.0",
     "webpack": "4",
-    "webpack-cli": "3"
+    "webpack-cli": "3",
+    "webpack-dev-server": "^3.11.2"
   }
 }
