--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build": "rm -rf dist && webpack ",
+    "build": "rm -rf dist && webpack --config webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "@webpack-cli/serve": "^1.3.1",
     "css-loader": "^5.2.0",
     "html-webpack-plugin": "4",
+    "mini-css-extract-plugin": "^1.4.0",
     "style-loader": "^2.0.0",
     "webpack": "4",
     "webpack-cli": "3",
